--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
    <div class="particle" style="width: 22px; height: 22px; background: #667eea; bottom: 20%; right: 15%; animation-delay: 4s;"></div>
    <div class="particle" style="width: 12px; height: 12px; background: #f093fb; top: 40%; left: 50%; animation-delay: 2.5s;"></div><!-- Main Content -->
    <div class="text-center z-10 px-6">
-    <h1 id="greeting" class="greeting-text text-5xl md:text-7xl lg:text-8xl font-bold mb-6">欢迎光临</h1>
+    <h1 id="greeting" class="greeting-text text-5xl md:text-7xl lg:text-8xl font-bold mb-6">操你妈逼</h1>
     <p id="subtitle" class="text-xl md:text-2xl opacity-80 font-light tracking-wide" style="color: #e0e0e0; font-family: 'Playfair Display', serif;">✨ Welcome to our website ✨</p>
    </div><!-- Decorative Rings -->
    <div class="absolute inset-0 flex items-center justify-center pointer-events-none">
